--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "videojs-contrib-hls": "^5.15.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vue-video-player": "^6.0.0",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
